// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowTemplate/WorkflowTemplateDetail should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          workflowTemplate.detail.title.wrapper
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/progress"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                common.back
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-row"
      >
        <div
          class="ant-col ant-col-8"
        >
          <h5
            class="ant-typography"
          >
            workflowTemplate.detail.title.base
          </h5>
          <div
            class="ant-descriptions"
          >
            <div
              class="ant-descriptions-view"
            >
              <table>
                <tbody>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          workflowTemplate.form.label.name
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          --
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          workflowTemplate.form.label.desc
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          --
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          workflowTemplate.form.label.instanceNameList
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          --
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <a
            href="/progress/update/undefined"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                workflowTemplate.detail.updateTemplate
              </span>
            </button>
          </a>
        </div>
        <div
          class="ant-col ant-col-12"
        >
          <h5
            class="ant-typography"
          >
            workflowTemplate.detail.title.step
          </h5>
          <div
            class="ant-steps ant-steps-vertical"
          >
            <div
              class="ant-steps-item ant-steps-item-process ant-steps-item-active"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    1
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.createStep.title
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    workflowTemplate.progressConfig.createStep.desc
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    2
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.exec.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.exec.subTitle"
                    >
                      workflowTemplate.progressConfig.exec.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-row"
                    >
                      <div
                        class="ant-col ant-col-10"
                      >
                        <div
                          class="ant-space ant-space-vertical full-width-element"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-bottom: 24px;"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5"
                              >
                                workflowTemplate.form.label.execUser
                                :
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              />
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5 text-black"
                              >
                                workflowTemplate.form.label.reviewDesc
                                :
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkflowTemplate/WorkflowTemplateDetail should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          workflowTemplate.detail.title.wrapper
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/progress"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                common.back
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-row"
      >
        <div
          class="ant-col ant-col-8"
        >
          <h5
            class="ant-typography"
          >
            workflowTemplate.detail.title.base
          </h5>
          <div
            class="ant-descriptions"
          >
            <div
              class="ant-descriptions-view"
            >
              <table>
                <tbody>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          workflowTemplate.form.label.name
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          db1
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          workflowTemplate.form.label.desc
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          123
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          workflowTemplate.form.label.instanceNameList
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          db1
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <a
            href="/progress/update/db1"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                workflowTemplate.detail.updateTemplate
              </span>
            </button>
          </a>
        </div>
        <div
          class="ant-col ant-col-12"
        >
          <h5
            class="ant-typography"
          >
            workflowTemplate.detail.title.step
          </h5>
          <div
            class="ant-steps ant-steps-vertical"
          >
            <div
              class="ant-steps-item ant-steps-item-process ant-steps-item-active"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    1
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.createStep.title
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    workflowTemplate.progressConfig.createStep.desc
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    2
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.review.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.review.subTitle"
                    >
                      workflowTemplate.progressConfig.review.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-row"
                    >
                      <div
                        class="ant-col ant-col-10"
                      >
                        <div
                          class="ant-space ant-space-vertical full-width-element"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-bottom: 24px;"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5"
                              >
                                workflowTemplate.form.label.reviewUser
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              >
                                admin
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5 text-black"
                              >
                                workflowTemplate.form.label.reviewDesc
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              >
                                1
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    3
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.review.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.review.subTitle"
                    >
                      workflowTemplate.progressConfig.review.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-row"
                    >
                      <div
                        class="ant-col ant-col-10"
                      >
                        <div
                          class="ant-space ant-space-vertical full-width-element"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-bottom: 24px;"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5"
                              >
                                workflowTemplate.form.label.reviewUser
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              >
                                admin
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5 text-black"
                              >
                                workflowTemplate.form.label.reviewDesc
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              >
                                2
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-steps-item ant-steps-item-process"
            >
              <div
                class="ant-steps-item-container"
              >
                <div
                  class="ant-steps-item-tail"
                />
                <div
                  class="ant-steps-item-icon"
                >
                  <span
                    class="ant-steps-icon"
                  >
                    4
                  </span>
                </div>
                <div
                  class="ant-steps-item-content"
                >
                  <div
                    class="ant-steps-item-title"
                  >
                    workflowTemplate.progressConfig.exec.title
                    <div
                      class="ant-steps-item-subtitle"
                      title="workflowTemplate.progressConfig.exec.subTitle"
                    >
                      workflowTemplate.progressConfig.exec.subTitle
                    </div>
                  </div>
                  <div
                    class="ant-steps-item-description"
                  >
                    <div
                      class="ant-row"
                    >
                      <div
                        class="ant-col ant-col-10"
                      >
                        <div
                          class="ant-space ant-space-vertical full-width-element"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-bottom: 24px;"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5"
                              >
                                workflowTemplate.form.label.execUser
                                :
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              >
                                admin
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-row"
                            >
                              <div
                                class="ant-col ant-col-5 text-black"
                              >
                                workflowTemplate.form.label.reviewDesc
                                :
                              </div>
                              <div
                                class="ant-col ant-col-18"
                              >
                                3
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
